--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
             @import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@200;300;400;600;700;800;900&display=swap');
         body{
-        background-color: green;
+        background-color: rgb(14, 15, 14);
         color:white;
         font-family:'mortal sans';
         }
