--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         background-color: rgb(14, 15, 14);
         color:white;
         font-family:'mortal sans';
+        margin:auto;
+        text-align: center;
         }
     </style>
 </head>
